--- a/rabbitApp/templates/user_profile.html
+++ b/rabbitApp/templates/user_profile.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% block content-body %}
-    {{ user.username }}
     {% for post in posts %}
         <div class="card mb-4">
             <div class="card-body">
@@ -18,4 +17,17 @@
             </div>
         </div>
     {% endfor %}
+{% endblock %}
+
+{% block sidebar %}
+    <div class="card my-4">
+        <h5 class="card-header"><b>u/ {{user}}</b></h5>
+        <div class="card-body align-items-center text-center " >
+             <p class="card-text"> This is your user profile.</p>
+             <a  class="my-1" href="{% url 'submit' %}"></i>
+                 <button class="btn btn-primary btn-lg" type="button" >CREATE POST</button>
+             </a>
+         </div>
+    </div>
+
 {% endblock %}
