US6-4 Added a plugin for select2 selectors, but cant make em work.

--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{% static 'css/style.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/rabbitStyles.css' %}"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="{% static 'css/select2.min.css' %}"/>
+
     {% block links %} {% endblock %}
 </head>
 <body>
@@ -144,6 +146,7 @@
 
 </body>
 <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+<script src="{% static 'js/select2.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/mdb.min.js' %}"></script>
 <script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
