--- a/rabbitApp/templates/post.html
+++ b/rabbitApp/templates/post.html
@@ -1,17 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content-body %}
-<div class="card mb-4">
-    <div class="card-body">
-        <p class="card-text text-muted h6">Posted by <b>{{ post.user }}</b> at {{ post.creation_date }} </p>
-        <a href="{% url 'post' post.id %}"><h2 class="card-title text-muted">{{ post.title | safe }}</h2></a>
-        {% if post.description %}
-            <p class="card-text">{{ post.description | safe }}</p>
-        {% elif post.img %}
-            <img src= "{{ post.img.url }}" class="img-fluid" alt="img" />
-        {% elif post.link %}
-            <a href={{ post.link }}>{{ post.link }}</a>
-        {% endif %}
+    <div class="card mb-4">
+        <div class="card-body">
+            <p class="card-text text-muted h6">Posted by <b>{{ post.user }}</b> at {{ post.creation_date }} </p>
+            <a href="{% url 'post' post.id %}"><h2 class="card-title text-muted">{{ post.title | safe }}</h2></a>
+            {% if post.description %}
+                <p class="card-text">{{ post.description | safe }}</p>
+            {% elif post.img %}
+                <img src= "{{ post.img.url }}" class="img-fluid" alt="img" />
+            {% elif post.link %}
+                <a href={{ post.link }}>{{ post.link }}</a>
+            {% endif %}
+        </div>
+        <div class="card-footer">
+            <form action="{% url 'comment' post.id %}" method="post">
+                {% csrf_token %}
+                {{ comment_form }}
+                <button class="btn btn-primary" type="submit">Comment</button>
+            </form>
+        </div>
     </div>
-</div>
+    <ul>
+    {% for node in post_comments.children %}
+        {% include 'comments.html' %}
+    {% endfor %}
+    </ul>
+
+
 {% endblock %}
