--- a/rabbitApp/templates/post.html
+++ b/rabbitApp/templates/post.html
@@ -13,15 +13,30 @@
                 <a href={{ post.link }}>{{ post.link }}</a>
             {% endif %}
         </div>
-        <div class="card-footer">
-            <form action="{% url 'comment' post.id %}" method="post">
-                {% csrf_token %}
-                {{ comment_form }}
-                <button class="btn btn-primary" type="submit">Comment</button>
-            </form>
-        </div>
     </div>
+    {% if not request.user.is_authenticated %}
+        <div class="card mb-4">
+        <div class="card-body">
+            <span>Share your thougths. Log in or Sign up...</span>
+            <div class="float-right">
+            <button class="btn btn-sm my-0 btn-outline-primary" type="button" onclick="modal_login()">Login</button>
+            <button class="btn btn-primary btn-sm my-0 ml-3" type="button" onclick="modal_register()">Sign up</button>
+            </div>
+         </div>
+        </div>
+    {% endif %}
+    {% if request.user.is_authenticated %}
+    <div class="card-footer">
+        <form action="{% url 'comment' post.id %}" method="post">
+            {% csrf_token %}
+            {{ comment_form }}
+            <button class="btn btn-primary" type="submit">Comment</button>
+        </form>
+    </div>
+    {%  endif %}
     <ul>
+
+
     {% for node in post_comments.children %}
         {% include 'comments.html' %}
     {% endfor %}
