--- a/rabbitApp/templates/post.html
+++ b/rabbitApp/templates/post.html
@@ -3,7 +3,7 @@
 {% block content-body %}
     <div class="card mb-4">
         <div class="card-body">
-            <p class="card-text text-muted h6">Posted by <b>{{ post.user }}</b> at {{ post.creation_date }} </p>
+            <p class="card-text text-muted h6">Posted by <a style="color:#000000" href="/r/{{post.user}}"><b>r/{{post.user}}</b></a> at {{ post.creation_date }} </p>
             <a href="{% url 'post' post.id %}"><h2 class="card-title text-muted">{{ post.title | safe }}</h2></a>
             {% if post.description %}
                 <p class="card-text">{{ post.description | safe }}</p>
@@ -27,6 +27,7 @@
     {% endif %}
     {% if request.user.is_authenticated %}
     <div class="card-footer">
+        <p>Share your thoughts as <a style="color:#000000" href="/r/{{user.username}}"><b>{{user.username}}</b></a></p>
         <form action="{% url 'comment' post.id %}" method="post">
             {% csrf_token %}
             {{ comment_form }}
@@ -44,3 +45,48 @@
 
 
 {% endblock %}
+
+{% block sidebar %}
+    <!-- Sidebar Widgets Column -->
+    {% if not request.user.is_authenticated %}
+    <div class="card my-4">
+            <h5 class="card-header">Welcome to warren {{ post.warren.name }}</h5>
+        <div class="card-body">
+            <p class="card-text"> Rabbit is a open community to post and share everything you want.</p>
+            <p class="card-text">Register and begin sharing your thougts, links and memes with friends and strangers. </p>
+        </div>
+    </div>
+    {%  endif %}
+    {% if request.user.is_authenticated %}
+    <div class="card my-4">
+            <h5 class="card-header">Welcome <b>{{user}}</b> to the warren {{ post.warren.name }}</h5>
+        <div class="card-body">
+            <p class="card-text"> This is the warren main page.</p>
+            <p class="card-text">The warren description {{ post.warren.description }}</p>
+            <a  class="my-1" href="{% url 'submit' %}"><i class="fas fa-pen cyan-text"></i>
+            <button class="btn btn-primary btn-sm my-0 ml-3" type="button">CREATE POST</button>
+            </a>
+        </div>
+    </div>
+    {% endif %}
+    <div class="card my-4">
+            <h5 class="card-header">Community rules</h5>
+        <div class="card-body">
+             <p class="card-text"> Remember before posting:</p>
+            <ul>
+                <li class="card-text">Respect others users</li>
+                <li class="card-text">Behave like you would in real life</li>
+                <li class="card-text">Look for the original source of content</li>
+                <li class="card-text">Search for duplicates before posting</li>
+                <li class="card-text">Read the community’s rules</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card my-4">
+            <h5 class="card-header">Rabbit disclaimer</h5>
+        <div class="card-body">
+             <p class="card-text"> Posting memes can be addictive and cause severe procrastination.</p>
+             <p class="card-text"> In no event shall Rabbit Inc be liable for any loss, personal damage, misuse of personal information or privacy breach</p>
+        </div>
+    </div>
+{% endblock sidebar %}
