US12-5/6 finished post and coments page. Nested view of coments, hidden form text field, reply, cancel and confirm buttons, added forms.py widget

--- a/rabbitApp/templates/comments.html
+++ b/rabbitApp/templates/comments.html
@@ -1,19 +1,41 @@
-<li>
-    <p>Posted by <a style="color:#000000" href="/r/{{node.value.user}}"><b>{{node.value.user}}</b></a> at {{node.value.creation_date}}</p>
-    <p>{{ node.value.text }}</p>
+ <li class="list-group-item">
+    <p>Posted by <a class="card-text text-muted h6" href="{{node.value.user}}"><b>{{node.value.user}}</b></a> at {{node.value.creation_date}}</p>
+    <p>{{ node.value.text| safe}}</p>
     {% if request.user.is_authenticated %}
-    <button class="btn btn-primary" type="reply">Reply comment</button>
-    <form action="{% url 'comment' post.id node.value.id  %}" method="post">
-        {% csrf_token %}
-        {{ comment_form }}
-        <button class="btn btn-primary" type="submit">Comment</button>
-    </form>
+        <a class="dropdown-item" onclick="showReply({{ node.value.id }})"><i class="fas fa-reply"></i> Reply</a>
+        <div class="container" id="{{node.value.id }}" style = "display: none;">
+            <div class="card mb-4">
+            <form action="{% url 'comment' post.id node.value.id  %}" method="post">
+                {% csrf_token %}
+                {{ comment_form.text}}
+                </div>
+                <div class = "mb-3">
+                <button right"; class="btn btn-sm my-0 btn-outline-primary waves-effect waves-light" type="cancel" onclick="showReply({{ node.value.id }})" >CANCEL</button>
+                <button class="btn btn-primary btn-sm my-0 ml-3" type="submit">COMMENT</button>
+                </div>
+            </form>
+        </div>
+
+
     {% endif %}
     <ul>
     {% for ch in node.children %}
         {%with node=ch template_name="comments.html" %}
-           <div style="width: 5px"></div> {%include template_name%}
+           <div style="width: 5px"></div>
+            {%include template_name%}
         {%endwith%}
     {% endfor %}
     </ul>
 </li>
+
+<script type="text/javascript">
+    function showReply(nodeId) {
+      var x = document.getElementById(nodeId);
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+</script>
+
