--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -33,6 +33,9 @@
                         Popular
                     </a>
                     <div class="dropdown-menu dropdown-primary">
+                        <a class="dropdown-item" href="{% url 'profile' user  %}" >
+                            My Profile
+                        </a>
                         <li class="dropdown-header " style="font-size: 10px;padding-left: 10px">MY COMMUNITIES</li>
                         {% for warren in warrens %}
                             <a class="dropdown-item" href="{% url 'warren' warren.name  %}" >
@@ -40,7 +43,6 @@
                                 <img class="img-fluid" src="{{ warren.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
                             {% endif %}
                             w/{{ warren.name | safe }}
-
                             </a>
                         {% endfor %}
                         <li class="dropdown-header " style="font-size: 10px;padding-left: 10px">OTHER</li>
@@ -108,6 +110,7 @@
                         <i class="fas fa-user-circle mr-2"></i> {{ request.user.username }}
                     </a>
                     <div class="dropdown-menu dropdown-primary">
+                         <a class="dropdown-item" href={% url "profile" request.user.username %}>My profile</a>
                          <a class="dropdown-item" href="/logout#">Log out</a>
                      </div>
                 </li>
@@ -142,17 +145,23 @@
                             <h5 class="card-header">Welcome to Rabbit</h5>
                         <div class="card-body">
                             <p class="card-text"> Rabbit is a open community to post and share everything you want.</p>
-                            <p class="card-text">Register and begin sharing your thougts, links and memes with friends and strangers. </p>
+                            <p class="card-text">Register and begin sharing your thoughts, links and memes with friends and strangers. </p>
                         </div>
                     </div>
                     {%  endif %}
                     {% if request.user.is_authenticated %}
                     <div class="card my-4">
-                            <h5 class="card-header">Welcome <b>{{user}}</b></h5>
+                            <h5 class="card-header">Welcome <b>r/{{user}}</b></h5>
                         <div class="card-body">
-                            <p class="card-text"> This is your personal rabbit front page.</p>
+                            <p class="card-text"> This is your personal rabbit front page. Remember to subscribe to warrens and follow friends to keep up with the memes.</p>
+                            <p class="card-text"> Share a post or start a new community.</p>
                             <a  class="my-1" href="{% url 'submit' %}"><i class="fas fa-pen cyan-text"></i>
                             <button class="btn btn-primary btn-sm my-0 ml-3" type="button">CREATE POST</button>
+                            </a>
+                        </div>
+                      <div class="card-body">
+                            <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-pen cyan-text"></i>
+                            <button class="btn btn-primary btn-sm my-0 ml-3" type="button">NEW WARREN</button>
                             </a>
                         </div>
                     </div>
