--- a/rabbitApp/templates/home.html
+++ b/rabbitApp/templates/home.html
@@ -4,7 +4,16 @@
     {% for post in lastPost %}
         <div class="card mb-4">
             <div class="card-body">
-                <p class="card-text text-muted h6">Posted by <b>{{ post.user }}</b> at {{ post.creation_date }} </p>
+            <p class="card-text text-muted h6">
+                <a  class="card-text text-muted h6" href="{% url 'warren' post.warren.name %}">
+                    {% if post.warren.profile_img %}
+                    <img class="img-fluid" src="{{ post.warren.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
+                    {% endif %}
+                    <b>w/{{ post.warren.name }}</b>
+                </a>
+                    • Posted by <a class="card-text text-muted h6" href="{% url 'profile' post.user %}"><b>r/{{ post.user }}</b></a>
+                    at {{ post.creation_date }}
+            </p>
                 <a href="{% url 'post' post.id %}"><h2 class="card-title text-muted">{{ post.title | safe }}</h2></a>
                 {% if post.description %}
                     <p class="card-text">{{ post.description | safe }}</p>
