--- a/rabbitApp/templates/warren_view.html
+++ b/rabbitApp/templates/warren_view.html
@@ -1,21 +1,75 @@
 {% extends 'base.html' %}
+
 {% block content-body %}
-{{ warren.name }}
     {% for post in posts %}
         <div class="card mb-4">
             <div class="card-body">
-                <p class="card-text text-muted h6">Posted by <b>{{ post.user }}</b> at {{ post.creation_date }} </p>
-                <h2 class="card-title">{{ post.title | safe }}</h2>
+            <p class="card-text text-muted h6">
+                <a  class="card-text text-muted h6" href="{% url 'warren' post.warren.name %}">
+                    {% if post.warren.profile_img %}
+                    <img class="img-fluid" src="{{ post.warren.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
+                    {% endif %}
+                    <b>w/{{ post.warren.name }}</b></a>
+                    • Posted by <a class="card-text text-muted h6" href="{% url 'profile' post.user %}"><b>r/{{ post.user }}</b></a>
+                    at {{ post.creation_date }}
+            </p>
+                <a href="{% url 'post' post.id %}"><h2 class="card-title text-muted">{{ post.title | safe }}</h2></a>
                 {% if post.description %}
                     <p class="card-text">{{ post.description | safe }}</p>
-                {% endif %}
-                {% if post.img %}
-                    <img src= "\media\{{ post.img }}" class="img-fluid" alt="img" />
-                {% endif %}
-                {% if post.link %}
-                    <a href={{ post.link}}>{{ post.link }}</a>
+                {% elif post.img %}
+                    <img src= "{{ post.img.url }}" class="img-fluid" alt="img" />
+                {% elif post.link %}
+                    <a href={{ post.link }}>{{ post.link }}</a>
                 {% endif %}
             </div>
         </div>
     {% endfor %}
 {% endblock %}
+
+{% block sidebar %}
+    <!-- Sidebar Widgets Column -->
+    <div class="card my-4">
+
+        <a  class="card-header text-muted h5" href="{% url 'warren' warren.name %}">
+            {% if warren.profile_img %}
+            <img class="img-fluid" src="{{ warren.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
+            {% endif %}
+            <b>w/{{ warren.name }}</b>
+         </a>
+        <div class="card-body">
+            <p class="card-text">Welcome to <b>w/{{ warren.name }}</b> main page.</p>
+            <p class="card-text">{{ warren.description | safe }}</p>
+            <p class="card-text"> Remember to subscribe to warrens and follow friends to keep up with the memes.</p>
+        {% if request.user.is_authenticated %}
+            <a  class="my-1" href="{% url 'submit' %}"><i class="fas fa-pen cyan-text"></i>
+            <button class="btn btn-primary btn-sm my-0 ml-3" type="button">CREATE POST</button>
+            </a>
+        </div>
+      <div class="card-body">
+            <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-pen cyan-text"></i>
+            <button class="btn btn-primary btn-sm my-0 ml-3" type="button">SUBSCRIBE TODO</button>
+            </a>
+        </div>
+    </div>
+    {% endif %}
+    <div class="card my-4">
+            <h5 class="card-header">Community rules</h5>
+        <div class="card-body">
+             <p class="card-text"> Remember before posting:</p>
+            <ul>
+                <li class="card-text">Respect others users</li>
+                <li class="card-text">Behave like you would in real life</li>
+                <li class="card-text">Look for the original source of content</li>
+                <li class="card-text">Search for duplicates before posting</li>
+                <li class="card-text">Read the community’s rules</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card my-4">
+            <h5 class="card-header">Rabbit disclaimer</h5>
+        <div class="card-body">
+             <p class="card-text"> Posting memes can be addictive and cause severe procrastination.</p>
+             <p class="card-text"> In no event shall Rabbit Inc be liable for any loss, personal damage, misuse of personal information or privacy breach</p>
+        </div>
+    </div>
+{% endblock sidebar %}
