US6-7-2 new post and warren in user profile minor base change buttons create_post view warren context

--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -156,12 +156,12 @@
                             <p class="card-text"> This is your personal rabbit front page. Remember to subscribe to warrens and follow friends to keep up with the memes.</p>
                             <p class="card-text"> Share a post or start a new community.</p>
                             <a  class="my-1" href="{% url 'submit' %}"><i class="fas fa-pen cyan-text"></i>
-                            <button class="btn btn-primary btn-sm my-0 ml-3" type="button">CREATE POST</button>
+                                <button class="btn btn-primary btn-sm my-0 ml-3" type="button">CREATE POST</button>
                             </a>
                         </div>
                       <div class="card-body">
-                            <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-pen cyan-text"></i>
-                            <button class="btn btn-primary btn-sm my-0 ml-3" type="button">NEW WARREN</button>
+                            <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-plus-circle cyan-text"></i>
+                                <button class="btn btn-primary btn-sm my-0 ml-3" type="button">NEW WARREN</button>
                             </a>
                         </div>
                     </div>
