--- a/rabbitApp/templates/user_profile.html
+++ b/rabbitApp/templates/user_profile.html
@@ -4,11 +4,14 @@
        <div class="card mb-4">
             <div class="card-body">
             <p class="card-text text-muted h6">
+
+            {% if post.warren %}
                 <a  class="card-text text-muted h6" href="{% url 'warren' post.warren.name %}">
                     {% if post.warren.profile_img %}
                     <img class="img-fluid" src="{{ post.warren.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
                     {% endif %}
                     <b>w/{{ post.warren.name }}</b></a>
+            {% endif %}
                     • Posted by <a class="card-text text-muted h6" href="{% url 'profile' post.user %}"><b>r/{{ post.user }}</b></a>
                     at {{ post.creation_date }}
             </p>
@@ -26,14 +29,15 @@
             {% if post.user == request.user %}
             <div class="card-body">
                 <div class="float-right">
-                <a class="my-1" href="{% url 'delete' post.id %}">
-                    <button class="btn btn-primary btn-sm my-0 ml-3" type="button">Delete</button>
-                </a>
+                    <button class="btn btn-primary btn-sm my-0 ml-3" type="button" onclick="deletePost('{{ post.id }}')">Delete</button>
                 </div>
             </div>
             {% endif %}
         </div>
     {% endfor %}
+
+    {% include 'confirm_delete.html' %}
+
 {% endblock %}
 
 
@@ -83,3 +87,29 @@
         </div>
     </div>
 {% endblock sidebar %}
+
+{% block more-scripts %}
+    <script>
+    function deletePost(id) {
+        var uri = location.protocol + '//' + location.host + "/delete/" + id;
+        $('#yes_btn').click(function () {
+           $.ajax({
+               method : 'POST',
+               url: uri,
+               data:{
+                   'csrfmiddlewaretoken':'{{ csrf_token }}',
+               },
+               success: (data) =>{
+                   if(data.status === 'ok'){
+                       location.reload();
+                   }
+                   else if(data.status === 'error'){
+                       alert(data.message);
+                   }
+               }
+           });
+        });
+        $('#modalConfirmDelete').modal('show');
+    }
+    </script>
+{% endblock %}
