//Icono dropdown warren // Info user cuando no hay warren // Mejora botones

--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -52,7 +52,7 @@
                             </a>
                         </li>
                         <li class="nav-item" style="margin-bottom: 10px">
-                            <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-pen cyan-text"></i>
+                            <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-plus-circle cyan-text"></i></i>
                                 Create Warren
                             </a>
                         </li>
