--- a/rabbitApp/templates/warren_view.html
+++ b/rabbitApp/templates/warren_view.html
@@ -41,15 +41,18 @@
             <p class="card-text">{{ warren.description | safe }}</p>
             <p class="card-text"> Remember to subscribe to warrens and follow friends to keep up with the memes.</p>
         {% if request.user.is_authenticated %}
-            <a  class="my-1" href="{% url 'submit' %}"><i class="fas fa-pen cyan-text"></i>
-            <button class="btn btn-primary btn-sm my-0 ml-3" type="button">CREATE POST</button>
-            </a>
+            <div class="card-body">
+                <a  class="my-1" href="{% url 'submit' %}"><i class="fas fa-pen cyan-text"></i>
+                    <button class="btn btn-primary btn-sm my-0 ml-3" type="button">CREATE POST</button>
+                </a>
+            </div>
+            <div class="card-body">
+                <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-plus-circle cyan-text"></i>
+                    <button class="btn btn-primary btn-sm my-0 ml-3" type="button">SUBSCRIBE TODO</button>
+                </a>
+            </div>
         </div>
-      <div class="card-body">
-            <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-pen cyan-text"></i>
-            <button class="btn btn-primary btn-sm my-0 ml-3" type="button">SUBSCRIBE TODO</button>
-            </a>
-        </div>
+
     </div>
     {% endif %}
     <div class="card my-4">
